--- a/devices/index.html
+++ b/devices/index.html
@@ -275,6 +275,7 @@
                     });
                 }, "xin chào mon": () => {
                     readOutLoud("Chào sếp, sếp muốn em giúp gì");
+                    display_to_screen("xin chào mon");
                 }
             });
 
